updtate network documentation
